// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Grid /> should render 1`] = `
<div>
  <div
    class="sc-aXZVg gTptkG sc-eqUAAy dTWgtO"
  >
    <div
      class="sc-gEvEer fFrSaF"
    >
      <div
        class="sc-fqkvVR iKRtny"
      >
        <div
          class="sc-dcJsrY fuWujG"
        >
          <div>
            <strong>
              titre 1
            </strong>
            <p>
              contenu 1
            </p>
          </div>
        </div>
        <div
          class="sc-dcJsrY fuWujG"
        >
          <div>
            <strong>
              titre 2
            </strong>
            <p>
              contenu 2
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Grid /> should render 5columns 1`] = `
<div>
  <div
    class="sc-aXZVg gTptkG sc-eqUAAy dTWgtO"
  >
    <div
      class="sc-gEvEer fFrSaF"
    >
      <div
        class="sc-fqkvVR iKRtny"
      >
        <div
          class="sc-dcJsrY efeprV"
        >
          <div>
            <strong>
              titre 1
            </strong>
            <p>
              contenu 1
            </p>
          </div>
        </div>
        <div
          class="sc-dcJsrY efeprV"
        >
          <div>
            <strong>
              titre 2
            </strong>
            <p>
              contenu 2
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
